Update Page Title
Change page title to reflect latest lab

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <meta name="description" content="Lab 10.2">
+        <meta name="description" content="Lab 11.2 git">
         <meta charset='utf-8' />
         <title>lab 9.2</title>
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
